[project]
name = "emitter_data"
version = "0.1.0"
description = "Simulator for radar emitter data"
authors = [
  { name="Emil", email="emgb20@student.bth.se" }
]

dependencies = [
  "pandas",
  "numpy",
  "pydantic",
  "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["emitter_data"]